# warmer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.arm64  Dockerfile.debian  Dockerfile.package  LICENSE  PACKAGING.md  README.md  build-docker.sh  build-packages.sh  warmer-config.toml
.cargo/: config.toml
.github/workflows/: build-packages.yml
config/: warmer-config.toml.example
src/: js_crawler.rs  main.rs
