[package]
name = "warmer"
version = "0.1.9"
authors = ["Abhai Sasidharan <mail@abh.ai>"]
edition = "2024"
description = "A lightweight CDN cache warmer. A sitemap.xml is required for this to work. See README on how to use."
keywords = ["cache", "cdn", "cache-warmer"]
license = "GPL-2.0-only"
repository = "https://github.com/codingsasi/warmer"
include = [
    "/Cargo.toml",
    "/Dockerfile",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tests/**",
]
rust-version = "1.90"

[package.metadata.deb]
maintainer = "Abhai Sasidharan <mail@abh.ai>"
copyright = "2024, Abhai Sasidharan <mail@abh.ai>"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern HTTP load testing and CDN cache warming tool in Rust. \
Inspired by tools like siege and wrk, warmer provides advanced features \
including sitemap-based cache warming, JavaScript site crawling, and \
comprehensive asset discovery with concurrent request handling."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/warmer", "usr/bin/warmer", "755"],
    ["README.md", "usr/share/doc/warmer/README.md", "644"],
    ["LICENSE", "usr/share/doc/warmer/LICENSE", "644"],
]

[package.metadata.generate-rpm]
license = "GPL-2.0-only"
summary = "A modern HTTP load testing and CDN cache warming tool in Rust"
assets = [
    { source = "target/release/warmer", dest = "/usr/bin/warmer", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/warmer/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/warmer/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
glibc = ">= 2.38"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8.1"
isahc = "1.7.2"
clap = { version = "4.0.18", features = ["derive"] }
ctrlc = "3.2.3"
scraper = "0.24.0"
url = { version = "2" }
tokio = { version = "1.0", features = ["full"] }
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
headless_chrome = "1.0.18"
num_cpus = "1.0"